# RAG_chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/frontend/static/: app.js  styles.css
app/frontend/templates/: index.html
app/services/: auth.py  document_parser.py  domain.py  grounding.py  ollama_client.py  prompt_protection.py  rag.py  text_chunker.py  vector_store.py
app/storage/: firebase_store.py
